BUGFIX: Use full height in selectbox preview element
If the secondary or tertiary label is not set the preview
element wouldn’t cover the whole selectbox which
will then show a graphical glitch.

--- a/packages/react-ui-components/src/ListPreviewElement/style.css
+++ b/packages/react-ui-components/src/ListPreviewElement/style.css
@@ -16,7 +16,7 @@
     cursor: not-allowed;
 }
 .listPreviewElement--isHighlighted {
-    background: var(--colors-PrimaryBlue);
+    background-color: var(--colors-PrimaryBlue) !important;
 }
 
 .listPreviewElement--isHighlighted > span {
